--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=.; Initial Catalog = ShopDatabase; Integrated Security=True"
+    "DefaultConnection": "server=.;Database=ShopDatabase;TrustServerCertificate=True;Trusted_Connection=True"
+
   },
   "ApiUrl": "https://localhost:5001/Content/"
 }
