--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=.;Database=ShopDatabase;TrustServerCertificate=True;Trusted_Connection=True"
+    "DefaultConnection": "server=.;Database=ShopDatabase;TrustServerCertificate=True;Trusted_Connection=True", 
+    "Redis": "localhost"
 
   },
   "ApiUrl": "https://localhost:5001/Content/"
