--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,9 +6,14 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=.;Database=ShopDatabase;TrustServerCertificate=True;Trusted_Connection=True", 
+    "DefaultConnection": "server=.;Database=ShopDatabase;TrustServerCertificate=True;Trusted_Connection=True",
+    "IdentityConnection": "server=.;Database=IdentityDatabase;TrustServerCertificate=True;Trusted_Connection=True",
     "Redis": "localhost"
 
   },
+  "Token": {
+    "Key": "super secret key",
+    "Issuer": "https://localhost:5001"
+  }
   "ApiUrl": "https://localhost:5001/Content/"
 }
